Enhance index.html with SEO and layout updates
Updated title and added SEO meta tags for better visibility. Modified styles and structure for improved layout and consistency.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Narish Cataquiz | SAP Consultant Portfolio</title>
 
-  <!-- Font Awesome Icons -->
+  <title>Narish Shairah Cataquiz | SAP Consultant & Analytics Portfolio</title>
+
+  <!-- SEO Meta -->
+  <meta name="description" content="Narish Shairah Cataquiz – SAP Consultant specializing in SAP BW, Analytics, Business Intelligence, and hands-on SAP learning portfolio.">
+  <meta name="author" content="Narish Shairah Cataquiz">
+  <meta name="keywords" content="Narish Shairah Cataquiz, SAP Consultant, SAP BW, SAP Analytics, SAP Business Intelligence, SAP PaPM">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Narish Shairah Cataquiz | SAP Consultant Portfolio">
+  <meta property="og:description" content="SAP Consultant focused on Analytics, Business Intelligence, SAP BW, PaPM, and hands-on SAP projects.">
+  <meta property="og:url" content="https://narishairah.github.io/">
+  <meta property="og:type" content="website">
+
+  <!-- Person Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Narish Shairah Cataquiz",
+    "jobTitle": "SAP Consultant",
+    "url": "https://narishairah.github.io/",
+    "sameAs": [
+      "https://www.linkedin.com/in/narishcataquiz/",
+      "https://github.com/narishairah/"
+    ]
+  }
+  </script>
+
+  <!-- Font Awesome -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -79,8 +106,7 @@
     .card h3 {
       font-size: 18px;
       font-weight: 600;
-      margin-top: 0;
-      margin-bottom: 12px;
+      margin: 0 0 12px;
       display: flex;
       align-items: center;
       gap: 10px;
@@ -96,7 +122,6 @@
       margin: 0;
     }
 
-    /* Project lists */
     .project-list {
       padding-left: 18px;
       margin: 12px 0;
@@ -107,29 +132,25 @@
     }
 
     .project-list a {
-      color: #0b5ed7;
+      color: #1f4fd8;
       text-decoration: none;
-      font-weight: 500;
+      font-weight: 400;
     }
 
     .project-list a:hover {
       text-decoration: underline;
     }
 
-    /* Grid */
     .skills-grid {
       display: grid;
       grid-template-columns: repeat(2, minmax(0, 1fr));
       gap: 32px;
-      align-items: stretch;
     }
 
-    /* SAP-style badge */
     .badge {
       background: #eef5ff;
       color: #0b5ed7;
       font-size: 12px;
-      font-weight: 500;
       padding: 4px 10px;
       border-radius: 8px;
       white-space: nowrap;
@@ -142,21 +163,7 @@
 
     .evidence a {
       color: #0b5ed7;
-      text-decoration: none;
       font-weight: 500;
-    }
-
-    .evidence a:hover {
-      text-decoration: underline;
-    }
-
-    a {
-      color: #0b5ed7;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
     }
 
     footer {
@@ -167,32 +174,32 @@
     }
 
     .social-links {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-  margin-top: 16px;
-}
+      display: flex;
+      justify-content: center;
+      gap: 24px;
+      margin-top: 16px;
+    }
 
-.social-links a {
-  width: 56px;
-  height: 56px;
-  background: #ffffff;
-  border-radius: 14px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 26px;
-  color: #0b5ed7;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.06);
-  transition: all 0.2s ease;
-}
+    .social-links a {
+      width: 56px;
+      height: 56px;
+      background: #ffffff;
+      border-radius: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 26px;
+      color: #0b5ed7;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+      transition: all 0.2s ease;
+    }
 
-.social-links a:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-  color: #084298;
-}
-    
+    .social-links a:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+      color: #084298;
+    }
+
     @media (max-width: 900px) {
       .skills-grid {
         grid-template-columns: 1fr;
@@ -203,168 +210,162 @@
 
 <body>
 
-  <header>
-    <h1>Narish Shairah Cataquiz</h1>
-    <p>SAP Consultant | Analytics & Business Intelligence</p>
-  </header>
+<header>
+  <h1>Narish Shairah Cataquiz</h1>
+  <p>SAP Consultant | Analytics & Business Intelligence</p>
+</header>
 
-  <main>
+<main>
 
-    <section>
-      <h2>About Me</h2>
-      <p>
-        With a background in <strong>SAP Business Warehouse (BW)</strong>,
-        <strong>SAP Business Objects (BOBJ)</strong>, and
-        <strong>SAP Profitability and Performance Management (PaPM)</strong>,
-        I continuously strengthen my skills through hands-on learning and real-world business scenarios.
+<section>
+  <h2>About Me</h2>
+  <p>
+    With a background in <strong>SAP Business Warehouse (BW)</strong>,
+    <strong>SAP Business Objects (BOBJ)</strong>, and
+    <strong>SAP Profitability and Performance Management (PaPM)</strong>,
+    I continuously strengthen my skills through hands-on learning and real-world business scenarios.
+  </p>
+  <p>
+    My experience with <strong>SAP BW-Integrated Planning (BW-IP)</strong> further developed my
+    interest in planning and simulation scenarios, emphasizing data modeling,
+    semantic layers, and analytics-ready design.
+  </p>
+</section>
+
+<section>
+  <h2>My Learning Journey</h2>
+  <p>
+    This section highlights SAP technologies I am actively exploring through hands-on practice,
+    sample business scenarios, and continuous learning.
+  </p>
+  <p style="font-style: italic; color: #6b7280;">
+    Current focus (2025): SAP Datasphere, SAP Analytics Cloud, SAP HANA SQL
+  </p>
+</section>
+
+<section>
+  <h2>Upskilling</h2>
+
+  <div class="skills-grid">
+
+    <div class="card">
+      <h3>
+        <i class="fa-solid fa-cloud"></i>
+        SAP Datasphere
+        <span class="badge">In Progress</span>
+      </h3>
+      <ul class="project-list">
+        <li>
+          <a href="#" target="_blank">
+            Sales Analytics Model – <em>Space setup, graphical views, analytical model</em>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">Customer & Product Master Data Modeling</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">Data Integration & Transformation using SAP sample datasets</a>
+        </li>
+      </ul>
+      <p class="evidence">
+        <a href="#" target="_blank">📄 Documentation</a> ·
+        <a href="#" target="_blank">📁 GitHub</a>
       </p>
-      <p>
-        My experience with <strong>SAP BW-Integrated Planning (BW-IP)</strong> further developed
-        my interest in planning and simulation scenarios, emphasizing data modeling,
-        semantic layers, and analytics-ready design.
+    </div>
+
+    <div class="card">
+      <h3>
+        <i class="fa-solid fa-chart-pie"></i>
+        SAP Analytics Cloud (SAC)
+        <span class="badge">In Progress</span>
+      </h3>
+      <ul class="project-list">
+        <li><a href="#" target="_blank">Interactive Story for Sales & Margin Analysis</a></li>
+        <li>
+          <a href="#" target="_blank">
+            Basic Planning Model – <i>Version management & data entry</i>
+          </a>
+        </li>
+        <li><a href="#" target="_blank">Live Connection Dashboard using SAP BW / Datasphere</a></li>
+      </ul>
+      <p class="evidence">
+        <a href="#" target="_blank">📄 Notes</a>
       </p>
-    </section>
+    </div>
 
-    <section>
-      <h2>My Learning Journey</h2>
-      <p>
-        This section highlights SAP technologies I am actively exploring through hands-on practice,
-        sample business scenarios, and continuous learning.
-      </p>
-      <p style="font-style: italic; color: #6b7280;">
-        Current focus (2025): SAP Datasphere, SAP Analytics Cloud, SAP HANA SQL
-      </p>
-    </section>
+  </div>
+</section>
 
-    <section>
-      <h2>Upskilling</h2>
+<section>
+  <h2>Skills</h2>
 
-      <div class="skills-grid">
+  <div class="skills-grid">
 
-        <div class="card">
-          <h3>
-            <i class="fa-solid fa-cloud"></i>
-            SAP Datasphere
-            <span class="badge">In Progress</span>
-          </h3>
-          <ul class="project-list">
-            <li>
-              <a href="#" target="_blank">
-                Sales Analytics Model – <em>Space setup, graphical views, analytical model</em>em>
-              </a>
-            </li>
-            <li>
-              <a href="#" target="_blank">
-                Customer & Product Master Data Modeling
-              </a>
-            </li>
-            <li>
-              <a href="#" target="_blank">
-                Data Integration & Transformation using SAP sample datasets
-              </a>
-            </li>
-          </ul>
-          <p class="evidence">
-            <a href="#" target="_blank">📄 Documentation</a> ·
-            <a href="#" target="_blank">📁 GitHub</a>
-          </p>
-        </div>
+    <div class="card">
+      <h3><i class="fa-solid fa-chart-line"></i> Business Intelligence & Analytics</h3>
+      <ul>
+        <li>Modeling (SAP BW on HANA, BW-IP, SAP PaPM)</li>
+        <li>Extraction (SAP S/4HANA, SAP ECC)</li>
+        <li>Reporting (SAP BOBJ, BW Queries, SAP AFO)</li>
+        <li>Data validation & reconciliation</li>
+        <li>Planning and simulation</li>
+      </ul>
+    </div>
 
-        <div class="card">
-          <h3>
-            <i class="fa-solid fa-chart-pie"></i>
-            SAP Analytics Cloud (SAC)
-            <span class="badge">In Progress</span>
-          </h3>
-          <ul class="project-list">
-            <li>
-              <a href="#" target="_blank">
-                Interactive Story for Sales & Margin Analysis
-              </a>
-            </li>
-            <li>
-              <a href="#" target="_blank">
-                Basic Planning Model – <i>Version management & data entry</i>
-              </a>
-            </li>
-            <li>
-              <a href="#" target="_blank">
-                Live Connection Dashboard using SAP BW / Datasphere
-              </a>
-            </li>
-          </ul>
-          <p class="evidence">
-            <a href="#" target="_blank">📄 Notes</a>
-          </p>
-        </div>
+    <div class="card">
+      <h3><i class="fa-solid fa-database"></i> Data Management</h3>
+      <ul>
+        <li>ETL processes & data mapping</li>
+        <li>Roles & authorizations</li>
+        <li>SQL aggregates & window functions</li>
+      </ul>
+    </div>
 
-      </div>
-    </section>
+    <div class="card">
+      <h3><i class="fa-solid fa-headset"></i> L2 AMS Technical & Support</h3>
+      <ul>
+        <li>Monitoring & troubleshooting</li>
+        <li>End-user analysis & support</li>
+        <li>Documentation improvement</li>
+      </ul>
+    </div>
 
-    <section>
-      <h2>Skills</h2>
+    <div class="card">
+      <h3><i class="fa-solid fa-ticket"></i> Ticketing Tools</h3>
+      <ul>
+        <li>JIRA</li>
+        <li>ServiceNow</li>
+      </ul>
+    </div>
 
-      <div class="skills-grid">
+  </div>
+</section>
 
-        <div class="card">
-          <h3><i class="fa-solid fa-chart-line"></i> Business Intelligence & Analytics</h3>
-          <ul>
-            <li>Modeling (SAP BW on HANA, BW-IP, SAP PaPM)</li>
-            <li>Extraction (SAP S/4HANA, SAP ECC)</li>
-            <li>Reporting (SAP BOBJ, BW Queries, SAP AFO)</li>
-            <li>Data validation & reconciliation</li>
-            <li>Planning and simulation</li>
-          </ul>
-        </div>
-
-        <div class="card">
-          <h3><i class="fa-solid fa-database"></i> Data Management</h3>
-          <ul>
-            <li>ETL processes & data mapping</li>
-            <li>Roles & authorizations</li>
-            <li>SQL aggregates & window functions</li>
-          </ul>
-        </div>
-
-        <div class="card">
-          <h3><i class="fa-solid fa-headset"></i> L2 AMS Technical & Support</h3>
-          <ul>
-            <li>Monitoring & troubleshooting</li>
-            <li>End-user analysis & support</li>
-            <li>Documentation improvement</li>
-          </ul>
-        </div>
-
-        <div class="card">
-          <h3><i class="fa-solid fa-ticket"></i> Ticketing Tools</h3>
-          <ul>
-            <li>JIRA</li>
-            <li>ServiceNow</li>
-          </ul>
-        </div>
-
-      </div>
-    </section>
-
-    <section>
+<section>
   <h2>Connect with Me</h2>
 
   <div class="social-links">
     <a href="https://www.linkedin.com/in/narishcataquiz/" target="_blank" aria-label="LinkedIn">
       <i class="fa-brands fa-linkedin"></i>
     </a>
-
     <a href="https://github.com/narishairah/" target="_blank" aria-label="GitHub">
       <i class="fa-brands fa-github"></i>
     </a>
   </div>
+
+  <p style="text-align:center; margin-top:12px;">
+    GitHub:
+    <a href="https://github.com/narishairah/" target="_blank">
+      github.com/narishairah
+    </a>
+  </p>
 </section>
 
-  </main>
+</main>
 
-  <footer>
-    © 2025 Narish · Built as a hands-on learning portfolio
-  </footer>
+<footer>
+  © 2025 Narish · Built as a hands-on learning portfolio
+</footer>
 
 </body>
 </html>
