Change section title and simplify content
Updated section title and removed redundant text.

--- a/index.html
+++ b/index.html
@@ -233,13 +233,9 @@
 </section>
 
 <section>
-  <h2>My Learning Journey</h2>
+  <h2>Current Focus (2025)</h2>
   <p>
-    This section highlights SAP technologies I am actively exploring through hands-on practice,
-    sample business scenarios, and continuous learning.
-  </p>
-  <p style="font-style: italic; color: #6b7280;">
-    Current focus (2025): SAP Datasphere, SAP Analytics Cloud, SAP HANA SQL
+    <em>SAP Datasphere, SAP Analytics Cloud, SAP HANA SQL</em>
   </p>
 </section>
 
