Add Google Search Console verification meta tag
Added Google Search Console verification meta tag.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Google Search Console verification -->
+  <meta name="google-site-verification" content="google52f84083ca20d7a7" />
+  
   <title>Narish Shairah Cataquiz | SAP Consultant & Analytics Portfolio</title>
 
   <!-- SEO Meta -->
