--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Search Console verification -->
-  <meta name="google-site-verification" content="google52f84083ca20d7a7" />
+  <meta name="google-site-verification" content="XBeddUuPoPGDLv3tKBMD5p4bvAuCUgSP-RJGhvkhRTs" />
   
   <title>Narish Shairah Cataquiz | SAP Consultant & Analytics Portfolio</title>
 
