Update section headings and project descriptions

--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
 </section>
 
 <section>
-  <h2>Current Focus (2025)</h2>
+  <h2>UPSKILLING (2025)</h2>
   <p>
-    <em>SAP Datasphere, SAP Analytics Cloud, SAP HANA SQL</em>
+    <em>SAP Datasphere, SAP Analytics Cloud</em>
   </p>
 </section>
 
 <section>
-  <h2>Upskilling</h2>
+  <h2>Current Focus</h2>
 
   <div class="skills-grid">
 
@@ -256,7 +256,7 @@
       <ul class="project-list">
         <li>
           <a href="#" target="_blank">
-            Sales Analytics Model – <em>Space setup, graphical views, analytical model</em>
+            DA180 - <em>Explore SAP Datasphere and SAP Analytics Cloud End-to-End</em>
           </a>
         </li>
         <li>
