Update section headings for current focus and upskilling

--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
 </section>
 
 <section>
-  <h2>UPSKILLING (2025)</h2>
+  <h2>CURRENT FOCUS</h2>
   <p>
-    <em>SAP Datasphere, SAP Analytics Cloud</em>
+    <em>SAP PaPM, SAP BW on HANA</em>
   </p>
 </section>
 
 <section>
-  <h2>Current Focus</h2>
+  <h2>UPSKILLING 2026</h2>
 
   <div class="skills-grid">
 
