Add learning platforms section to index.html
Added a new section for learning platforms with details on SAP Learning Hub, DataCamp, and Udemy.

--- a/index.html
+++ b/index.html
@@ -296,6 +296,59 @@
 </section>
 
 <section>
+  <h2>Learning Platforms</h2>
+
+  <div class="skills-grid">
+
+    <div class="card">
+      <h3>
+        <i class="fa-solid fa-graduation-cap"></i>
+        SAP Learning Hub & Learning Journeys
+      </h3>
+      <ul>
+        <li>SAP PaPM Learning Journey (Configuration & Modeling)</li>
+        <li>SAP BW on HANA & BW-IP fundamentals</li>
+        <li>SAP Datasphere & SAC guided learning paths</li>
+      </ul>
+      <p class="evidence">
+        Structured, role-based SAP learning aligned with real project scenarios
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>
+        <i class="fa-solid fa-chart-simple"></i>
+        DataCamp
+      </h3>
+      <ul>
+        <li>SQL for Data Analysis</li>
+        <li>Data Modeling & Analytics fundamentals</li>
+        <li>Python & AI concepts for analytics work</li>
+      </ul>
+      <p class="evidence">
+        Hands-on exercises reinforcing analytical thinking and data foundations
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>
+        <i class="fa-solid fa-video"></i>
+        Udemy
+      </h3>
+      <ul>
+        <li>SAP BW / HANA deep dives</li>
+        <li>Analytics, reporting & visualization concepts</li>
+        <li>Supplementary technical upskilling</li>
+      </ul>
+      <p class="evidence">
+        Practical, topic-focused learning to complement SAP projects
+      </p>
+    </div>
+
+  </div>
+</section>
+  
+<section>
   <h2>Skills</h2>
 
   <div class="skills-grid">
