--- a/index.html
+++ b/index.html
@@ -74,19 +74,24 @@
     /* Dark Mode Toggle Button */
     #darkToggle {
       margin-top: 16px;
-      padding: 10px 14px;
+      padding: 10px 18px;
       border-radius: 12px;
-      border: none;
+      border: 2px solid #ffffffcc;
       cursor: pointer;
       font-size: 18px;
-      background: #ffffff;
-      color: #0a2540;
+      background: #0a2540;
+      color: #fff;
+      font-weight: 600;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       transition: all 0.2s ease;
+      user-select: none;
     }
 
-    #darkToggle:hover {
-      transform: translateY(-1px);
+    #darkToggle:hover, #darkToggle:focus {
+      background: #084298;
+      border-color: #ffffff;
+      outline: none;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.25);
     }
 
     main {
@@ -311,6 +316,12 @@
       color: #bfdbfe;
       box-shadow: 0 12px 32px rgba(0,0,0,0.6);
     }
+
+    /* Center the "Connect with Me" content */
+    section h2 + .social-links {
+      justify-content: center;
+      text-align: center;
+    }
   </style>
 </head>
 
@@ -319,7 +330,7 @@
 <header>
   <h1>Narish Shairah Cataquiz</h1>
   <p>SAP Consultant | Analytics & Business Intelligence</p>
-  <button id="darkToggle" aria-label="Toggle dark mode">🌙</button>
+  <button id="darkToggle" aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
 </header>
 
 <main>
